# type_editer

./: .gitignore  README.md  REFACTOR_COMPLETE_SUMMARY.md  REFACTOR_SUMMARY.md  package-lock.json  package.json  start.bat  start.js  start.ps1  start.sh  test-api.js  type_editor.db  type_editor.db-shm  type_editor.db-wal  启动说明.md  诊断指南.md
backend/: Cargo.toml
backend-express/: debug.js  index.js  jest.config.js  jest.setup.js  monitor.js  package-lock.json  package.json  server.js  test-api.js  test_db.sqlite-shm  test_db.sqlite-wal
backend-express/__tests__/: api.test.js  server.test.js  testApp.js
backend-express/src/: app.js
backend-express/src/config/: index.js
backend-express/src/middleware/: cors.js  errorHandler.js  logger.js  rateLimit.js
backend-express/src/routes/: content.js  documents.js  nodes.js  upload.js
backend-express/src/services/: contentService.js  database.js  documentService.js  nodeService.js
backend/src/: db.rs  handlers.rs  main.rs  models.rs
frontend/: node.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vitest.config.js
frontend/src/: App.css  App.jsx  App.tsx  AppLayout.jsx  index.css  main.jsx  vite-env.d.ts
frontend/src/components/: BibTeXDetailModal.jsx  BibTeXModal.jsx  BibTeXModal.tsx  Citation.jsx  Citation.tsx  EditTemplateModal.jsx  Editor.jsx  Editor.tsx  EditorArea.tsx  EditorToolbar.jsx  EditorToolbar.tsx  EmptyState.tsx  ErrorNotification.jsx  ErrorNotification.tsx  ImagePreviewModal.jsx  (+11 more)
tests/integration/: api.test.js
tests/security/: security.test.js
(+24 files in other folders)
